New feature with threading
Implement a queue for trigger event
Event are being processed by the main thread
Add setuid and setgid option in main program
Update config example

Trigger :
  +add smtp timeout in mail trigger

--- a/config.conf
+++ b/config.conf
@@ -24,6 +24,11 @@ log_target = SYSLOG
 # (Default true)
 ignore_own = true
 
+# If these defined, netsav privileges will be downgrade to this user and group
+#user =
+#group =
+
+
 
 ### SERVER CONFIGURATION
 [SERVER]
@@ -39,6 +44,7 @@ port = 1789
 # Values (String or bool):
 # (Default : true)
 #log_client = true
+
 
 
 ### DEFAULT VALUES for hosts section
