--- a/package/DEBIAN/control
+++ b/package/DEBIAN/control
@@ -1,5 +1,5 @@
 Package: netsav
-Version: 1.2.0
+Version: 1.3.1
 Section: net
 Priority: optional
 Architecture: all
@@ -7,4 +7,9 @@ Depends: python3.2 (>= 3.2), python3.2-dev (>= 3.2)
 Maintainer: Pierre GINDRAUD <pgindraud@gmail.com>
 Description: NETwork System Availability Verifier
  A network system availability checker for remote host over Internet (as exemple)
+ .
+ This program consists in a deamon writen in python3.
+ The daemon contains a main http server who answer to simple
+ http get query and (several) client whose make query periodically
+ in order to check other server availability
 Homepage: https://github.com/Turgon37/Netsav
